src/styles/AuthPage.module.css
.page {
    width: 100vw;
    height: 100vh;
    display: flex;
    overflow-y: hidden;
    overflow-x: hidden;
}

.sections {
    width: 50vw;
    height: 100vh;
    display: flex;
    padding-left: 10rem;
    padding-right: 10rem;
}

.section-1 {
    padding-top: 10rem;
    padding-bottom: 5rem;
    overflow-y: scroll;
    scrollbar-width: none;
    -ms-overflow-style: none; 
}

.section-1::-webkit-scrollbar {
  display: none;
}

.section-2 {
    align-items: center;
}

.slider-bg {
    position: fixed;
    top: 0;
    left: -7rem;
    width: calc(50vw + 7rem);
    height: 100vh;
    background-image: url('../assets/auth_page_bg_1.avif');
    background-repeat: no-repeat;
    background-position: right;
    border-top-left-radius: 7rem;
    border-bottom-right-radius: 7rem;
    box-shadow: inset 0 0 100px 2rem black;
}

.slider-bg::after {
    content: "";
    position: absolute;
    inset: 0; 
    background: hsl(50, 100%, 50%, 0.5); 
    mix-blend-mode: multiply;
    pointer-events: none;
    border-top-left-radius: 7rem;
    border-bottom-right-radius: 7rem;
}

.ini-left { 
    transform: translateX(0%);
}

.ini-right {
    transform: translateX(calc(50vw + 7rem));
}

.slider-left {
  animation: slideLeft 0.6s forwards;
}
.slider-right {
  animation: slideRight 0.6s forwards;
}

@keyframes slideLeft {
    from { transform: translateX(calc(50vw + 7rem)); }
    to   { transform: translateX(0%); }
}

@keyframes slideRight {
    from   { transform: translateX(0%); }
    to { transform: translateX(calc(50vw + 7rem)); }
}

  /* from { transform: translateX(calc(50vw + 7rem)); } */

